# claide

./: .gitignore  .gitmodules  Cargo.toml  README.md  example.Clyde.toml  example.clyde.toml  example.env  personality.txt  settings.toml.example
crates/angel-core/: Cargo.toml
crates/angel-core/src/: chat.rs  lib.rs
crates/angel-media/: Cargo.toml
crates/angel-media/examples/: simple.rs
crates/angel-media/src/: buffer.rs  context.rs  error.rs  format.rs  lib.rs  reader.rs  source.rs
crates/clyde-tools/: Cargo.toml
crates/clyde-tools/src/: error.rs  lib.rs  pydantic.rs  registry.rs  validate.rs
crates/discord-content/: Cargo.toml
crates/discord-content/src/: lib.rs
crates/gemini/: Cargo.toml
crates/gemini-model/: Cargo.toml
crates/gemini-model/src/: content.rs  lib.rs  safety_setting.rs  system_instructions.rs
crates/gemini/src/: lib.rs  request.rs
crates/google-gemini/: Cargo.toml
crates/google-gemini/src/: content.rs  lib.rs  model.rs  request.rs
crates/google-gemini/src/model/: generation_config.rs  schema.rs  system.rs
crates/llama/: Cargo.toml
crates/llama-sys/: Cargo.toml  build.rs
crates/llama-sys/src/: bindings.cpp  lib.rs
crates/llama/examples/: hello.rs
crates/llama/src/: clip_model.rs  error.rs  lib.rs  main.rs  model.rs  owned_ptr.rs  session.rs
src/: attachment.rs  cli.rs  config.rs  content.rs  discord.rs  fs.rs  gemini.rs  graph.py  huggingface.rs  image_to_text.rs  lila.txt  main.rs  model.rs  personality.txt  physical_control.rs  prompt.rs  python.rs  screen_recorder.rs  settings.rs  system_prompt.txt  text_generation.rs  tokenizer.rs  util.rs
src/discord/: typing.rs
src/gemini/: model.rs  settings.rs
src/gemini/model/: content.rs  incoming.rs  outgoing.rs
