[package]
name = "claide"
version = "0.5.0"
edition = "2021"

[dependencies]
aho-corasick.workspace = true
anyhow.workspace = true
figment.workspace = true
futures-util.workspace = true
google-gemini.workspace = true
linkify.workspace = true
mime.workspace = true
reqwest.workspace = true
rustix = { version = "0.38.42", features = ["process"] }
schemars = "0.8.21"
serde.workspace = true
serde_json.workspace = true
serde_with = "3.11.0"
tokio = { workspace = true, features = [
    "fs",
    "macros",
    "process",
    "rt-multi-thread",
    "signal",
    "sync",
    "time",
] }
tracing.workspace = true
tracing-subscriber.workspace = true
url.workspace = true

[lints]
workspace = true

[workspace]
members = ["crates/*"]
resolver = "2"

[workspace.dependencies]
aho-corasick = "1.1"
anyhow = "1"
figment = { version = "0.10", features = ["toml"] }
futures-util = { version = "0.3", default-features = false, features = ["std"] }
google-gemini = { version = "0.0.0", path = "crates/google-gemini" }
linkify = "0.10"
mime = "0.3"
reqwest = { version = "0.12", default-features = false, features = [
    "brotli",
    "gzip",
    "http2",
    "json",
    "rustls-tls",
] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = "1.42"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
url = "2.5"

[workspace.lints.clippy]
alloc_instead_of_core = "deny"
std_instead_of_alloc = "deny"
std_instead_of_core = "deny"
