[package]
name = "lila"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.94"
async-stream = "0.3.6"
futures-util = { version = "0.3.31", features = ["sink"] }
pin-project-lite = "0.2.15"
rustls = { version = "0.23.20", features = ["ring"] }
serde = { version = "1.0.216", features = ["derive"] }
serde_json = "1.0.133"
tokio = { version = "1.42.0", features = ["macros", "rt-multi-thread", "sync", "time"] }
tokio-tungstenite = { version = "0.26.1", features = ["rustls-tls-webpki-roots"] }
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }
twilight-gateway = { git = "https://github.com/twilight-rs/twilight", rev = "9dcf4250dcac3f80fb87333f1f7f25960bb21fb0", version = "0.16.0-rc.1" }
twilight-http = { git = "https://github.com/twilight-rs/twilight", rev = "9dcf4250dcac3f80fb87333f1f7f25960bb21fb0", version = "0.16.0-rc.1" }
twilight-model = { git = "https://github.com/twilight-rs/twilight", rev = "9dcf4250dcac3f80fb87333f1f7f25960bb21fb0", version = "0.16.0-rc.1" }
