[package]
name = "angel-core"
version = "0.1.0"
edition = "2021"

[dependencies]
angel-media = { version = "0.0.0", path = "../angel-media", default-features = false }
anyhow = { version = "1.0.82", default-features = false, features = ["std"] }
base64 = { version = "0.22.0", default-features = false, features = ["std"] }
dashmap = { version = "5.5.3", default-features = false }
futures-util = { version = "0.3.30", default-features = false, features = ["std"] }
image = { version = "0.25.1", default-features = false, features = ["png"] }
image-compare = { version = "0.4.1", default-features = false }
ollama-rs = { version = "0.1.9", default-features = false }
reqwest = { version = "0.12.3", default-features = false, features = ["brotli", "charset", "cookies", "deflate", "gzip", "http2", "native-tls", "stream"] }
serde = { version = "1.0.198", default-features = false, features = ["derive", "std"] }
serde_json = { version = "1.0.116", default-features = false, features = ["std"] }
tokio = { version = "1.37.0", default-features = false, features = ["rt", "sync"] }
tokio-stream = { version = "0.1.15", default-features = false, features = ["sync"] }
tokio-util = { version = "0.7.10", default-features = false, features = ["io", "io-util"] }
tracing = { version = "0.1.40", default-features = false, features = ["std"] }
