[package]
name = "angel-media"
version = "0.0.0"
edition = "2021"

[dependencies]
bytes = { version = "1.6.0", default-features = false, features = ["std"] }
ffmpeg = { version = "7.0.0", package = "ffmpeg-next", default-features = false, features = ["codec", "device", "filter", "format", "software-resampling", "software-scaling"] }
image = { version = "0.25.1", default-features = false }
tracing = { version = "0.1.40", default-features = false, features = ["std"] }
